# safewallet-lite

./: .gitignore  .travis.yml  DEVELOPING.md  LICENSE  OKtadP.json  README.md  application.qrc  build.sh  safecoinwallet-lite.pro  safewallet-lite.pro  win-static-build.sh
lib/: Cargo.toml  Makefile  safecoinwalletlitelib.h  safewalletlitelib.h
lib/src/: lib.rs
res/: Info.plist  SIGNATURES_README  appdmg.json  safe_qt_wallet_de.ts  safe_qt_wallet_es.ts  safe_qt_wallet_fr.ts  safe_qt_wallet_it.ts  safe_qt_wallet_pt.ts  safe_qt_wallet_ru.ts  safe_qt_wallet_template.ts  safe_qt_wallet_uk.ts  safe_qt_wallet_zh.ts  safecoinwalletlite.desktop  safecoinwalletlite_de.qm  safecoinwalletlite_es.ts  safecoinwalletlite_fa.qm  safecoinwalletlite_fa.ts  safecoinwalletlite_hr.ts  safecoinwalletlite_it.qm  safecoinwalletlite_pot.ts  safecoinwalletlite_pt.ts  safecoinwalletlite_sr.qm  safecoinwalletlite_sr.ts  safecoinwalletlite_template.ts  safecoinwalletlite_tr.qm  safewalletlite_de.qm  safewalletlite_de.ts  safewalletlite_fa.qm  safewalletlite_fr.qm  safewalletlite_fr.ts  safewalletlite_hr.qm  safewalletlite_it.qm  safewalletlite_it.ts  safewalletlite_pot.qm  safewalletlite_pt.qm  safewalletlite_ru.qm  safewalletlite_ru.ts  safewalletlite_sr.qm  safewalletlite_template.qm  safewalletlite_tr.qm  (+4 more)
src/: about.ui  addressbook.cpp  addressbook.ui  addresscombo.cpp  balancestablemodel.cpp  camount.cpp  camount.h  chatmodel.cpp  chatmodel.h  connection.cpp  connection.h  connection.ui  contactmodel.cpp  contactmodel.h  contactrequest.ui  controller.cpp  controller.h  deposithush.ui  (+26 more)
(+24 files in other folders)
