[package]
name = "qtlib"
version = "0.1.0"
authors = ["SafeWallet"]
edition = "2018"

[lib]
name = "safewalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
blake3 = "0.3.4"
safewalletlitelib = { git = "https://github.com/OleksandrBlack/safewallet-light-cli", rev = "80f7cb746d160f0f8717db0db8d79491a2d4e3ad" }
