[package]
name = "qtlib"
version = "0.1.0"
authors = ["SafeWallet"]
edition = "2018"

[lib]
name = "safewalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
blake3 = "0.3.4"
safewalletlitelib = { git = "https://github.com/OleksandrBlack/safewallet-light-cli", rev = "6c3aee0bdf9d00cdadc7bd5fc11b49ba3acff9d6" }
